@@ -36,7 +36,8 @@ Readonly::Array  my @ENV_VARS_TO_PROPAGATE => qw/ PATH
                                                   IRODS_ENVIRONMENT_FILE /;
 
 Readonly::Scalar my $WR_LIMIT_GROUPS_OPTION        => q[limit_grps];
-Readonly::Hash   my %LIMIT_GROUPS2DEFINITION_ATTRS => ('irods' => 'reserve_irods_slots',);
+Readonly::Hash   my %LIMIT_GROUPS2DEFINITION_ATTRS =>
+                    ('irods' => 'reserve_irods_slots',);
 
 =head1 NAME
 
@@ -108,35 +109,41 @@ override 'execute' => sub {
 ############## Private attributes and methods ####################
 ##################################################################
 
-has '_limited_groups2attributes' => (
-  isa     => 'HashRef',
-  is      => 'ro',
-  default => sub { \%LIMIT_GROUPS2DEFINITION_ATTRS },
-);
-
-has '_group_limits' => (
+has '_attributes2limit_groups' => (
   isa        => 'HashRef',
   is         => 'ro',
   lazy_build => 1,
 );
-sub _build__group_limits {
+sub _build__attributes2limit_groups {
+  my $self = shift;
+  my $h = {};
+  for my $group (@{$self->_limit_groups}) {
+    $h->{$group} = exists $LIMIT_GROUPS2DEFINITION_ATTRS{$group}
+                   ? $LIMIT_GROUPS2DEFINITION_ATTRS{$group}
+                   : $group;
+  }
+  return $h;
+}
+
+has '_limit_groups' => (
+  isa        => 'ArrayRef',
+  is         => 'ro',
+  lazy_build => 1,
+);
+sub _build__limit_groups {
   my $self = shift;
 
-  my $limits = {};
   my $groups = $self->wr_conf->{$WR_LIMIT_GROUPS_OPTION};
-  if ($groups and keys %{$groups}) {
-    foreach my $group (keys %{$groups}) {
-      my $name = $self->_limited_groups2attributes->{$group};
-      $name or $self->logcroak(qq[Limit group '$group' is not known]);
-      defined $groups->{$group} or
-        $self->logcroak(qq[Undefined limit for group '$group']);
-      $limits->{$name} = join q[:], $group, $groups->{$group};
-    }
+  $groups ||= [];
+  if (@{$groups}) {
+    $groups = [(sort @{$groups})];
+    $self->info(q[The following groups might be subject to limits: ] .
+                join q[, ], @{$groups});
   } else {
-    $self->logwarn(q[Groups limits are not configured]);
+    $self->logwarn(q[No limit groups are configured]);
   }
 
-  return $limits;
+  return $groups;
 }
 
 has '_dependencies' => (
@@ -246,12 +253,18 @@ sub _definition4job {
     }
   }
 
-  my @limit_groups = sort
-                     map  { $self->_group_limits->{$_} }
-                     grep { $d->$_ }
-                     keys %{$self->_group_limits};
+  my @limit_groups = ();
+  for my $group ( keys %{$self->_attributes2limit_groups} ) {
+    my $method = $self->_attributes2limit_groups->{$group};
+    $d->can($method) or $self->logcroak(
+      "Limit group '$group' does not map to an existing " .
+      'definition object method'
+    );
+    $d->$method and push @limit_groups, $group;
+  }
+
   if (@limit_groups) {
-    $def->{$WR_LIMIT_GROUPS_OPTION} = \@limit_groups;
+    $def->{$WR_LIMIT_GROUPS_OPTION} = [(sort @limit_groups)];
   }
 
   my $log_file = sub {
