@@ -8,6 +8,9 @@ LIST OF CHANGES
         runs as QC runs.
      3. Removed access to ml warehouse for retrieval of LIMs data
         since this information is no longer required.
+ - A simpler implementation of wr's limit groups to allow for setting
+   a persistent limit globally and for using limit groups that map
+   directly to accessors of the function definition object.
 
 release 58.3.0
  - bugfix in the code for interaction with the Majora/COG-UK API:
